break the file up into a different step and a different task file ?

--- a/pipeline-7935/multipass-params-step.yaml
+++ b/pipeline-7935/multipass-params-step.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1alpha1
 kind: StepAction
 metadata:
-  name: simple-step-action
+  generateName: simple-step-action
   labels:
     app.kubernetes.io/version: "0.1.0"
   annotations:
@@ -36,26 +36,3 @@ spec:
 
     #Value of VAR2 is going to be "$( params.param2 )"
     echo "If param2 is not defined value of VAR2 is incorrect [${VAR2}]"
-
----
-apiVersion: tekton.dev/v1
-kind: TaskRun
-metadata:
-  name: simple-task-run
-spec:
-  taskSpec:
-    steps:
-      - name: param-substitution-test
-        ref:
-          name: simple-step-action
-        params:
-          - name: param1
-            value: "Value for Param 1"
-      - name: param-substitution-test-2
-        ref:
-          name: simple-step-action
-        params:
-          - name: param1
-            value: "Value for Param 1"
-          - name: param2
-            value: "Value for Param 2"
