--- a/pipeline-7935-stepaction-default-value/multipass-params-taskrun.yaml
+++ b/pipeline-7935-stepaction-default-value/multipass-params-taskrun.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1
 kind: TaskRun
 metadata:
-  name: simple-task-run-
+  generateName: simple-task-run-
 spec:
   taskSpec:
     steps:
